src/server/run/snapshots/annonars__server__run__versions__test__deserialize_spec_yaml-2.snap
---
source: src/server/run/versions.rs
expression: "&spec"
---
dc.identifier: "annonars/functional:110+0.33.0-"
dc.title: annonars functional elements RocksDB
dc.creator: VarFish Developer Teams
dc.format: application/x-rocksdb
dc.date: "20240105"
x-version: 110+0.33.0
dc.description: "RocksDB built from RefSeq Functional Elements (and other sources in\nthe future).\n"
dc.source:
  - "PMID:34876495"
  - "https://www.ncbi.nlm.nih.gov/refseq/"
x-created-from:
  - name: RefSeq Functional Elements
    version: "110"
