src/server/run/snapshots/annonars__server__run__versions__test__deserialize_spec_yaml@alphamissense-grch38-1+0.33.0.snap
---
source: src/server/run/versions.rs
expression: "&spec"
---
dc.identifier: "annonars/seqvars/alphamissense:1+0.33.0-grch38"
dc.title: annonars AlphaMissense RocksDB Database
dc.creator: DeepMind
dc.contributor:
  - VarFish Developer Teams
dc.format: application/x-rocksdb
dc.date: "20240105"
x-version: 1+0.33.0
x-genome-release: grch38
dc.description: "RocksDB with the information from the AlphaMissense_hgGENOME.tsv.gz\nfiles for the canonical transcripts.\n"
dc.source:
  - "PMID:37733863"
  - "https://storage.googleapis.com/dm_alphamissense/README.pdf"
x-created-from:
  - name: AlphaMissense
    version: "1"
