src/server/run/snapshots/annonars__server__run__versions__test__deserialize_spec_yaml@functional-grch38-110+0.33.0-2.snap
---
source: src/server/run/versions.rs
expression: "&proto_spec"
---
identifier: "annonars/functional:110+0.33.0-"
title: annonars functional elements RocksDB
creator: VarFish Developer Teams
contributor: []
format: application/x-rocksdb
date: "20240105"
version: 110+0.33.0
genome_release: ~
description: "RocksDB built from RefSeq Functional Elements (and other sources in\nthe future).\n"
source:
  - "PMID:34876495"
  - "https://www.ncbi.nlm.nih.gov/refseq/"
created_from:
  - name: RefSeq Functional Elements
    version: "110"
